version 2.0-rc2 XX-May-2012
. [NEW] Added Javascript test using JSCocoa (Mac only)

version 2.0-rc1 19-Apr-2012
. [NEW] v1.1 Forward-ported changes:
		CCArray: new sorting methods, replaceObjectAtIndex, isEqualToArray
		CCArray: equalilty is tested by isEqual instead of comparing pointer addresses
		CCArray: CCARRAY_FOREACH macro is now ARC compatible
		DrawPrimitives: Added new functions: ccDrawRect, ccDrawSolidRect
		Macros: CCLOG logs the class/method name
		Particles: The scheduler is removed on dealloc
		TMX: fixed bug on release when parsing errors.
. [NEW] Actions: Added Catmull Rom By/To and Cardinal Spline By/To actions
. [NEW] ActionManager: Added support for pause/resume all actions of target
. [NEW] Configuration: logs in which thread the director is running (Mac only)
. [NEW] DrawingPrimitives: added ccDrawCatmullRom, ccDrawCardinalSpline
. [NEW] FileUtils: It is a singleton (easier to subclass)
		NSFileManager and NSBundle are properties (can be changed in runtime)
		Added "fallback suffix" support for "get full path" and "remove suffix" (disabled by default).
		On iPad the default suffix is "-ipad". Before it was ""
. [NEW] LabelAtlas: added .plist config file support. Easier to migrate games to higher resolutions.
. [NEW] LabelTTF: Added support for vertical alignment
. [NEW] Tiled: TMX tile rotation is supported
. [FIX] All: Fixed compiler warnings. Format strings changed from %08X to %p
. [FIX] Deprecated: displayedFrame points to displayFrame avoiding infinite loop (issue #1347)
. [FIX] Director: Fixed projection. ViewPort is the size of the screen. Projection adjusted (issue #1355)
		Fixed crash when calling "end" on RetinaDisplay
		Only enable DepthTesting is the view has a depth buffer
		Does not raise assert if startAnimation is called when it is already animated.
. [FIX] Events: onMouseExit/Enter fixed on Mac
. [FIX] LabelBMFont: can be "init" without further arguments
		Glyphs with big yOffset are rendered correctly (issue #1343)