@@ -66,17 +66,17 @@ NSLog(@"%@",[NSString stringWithFormat:(s), ##__VA_ARGS__])
 
 #if !defined(COCOS2D_DEBUG) || COCOS2D_DEBUG == 0
 #define CCLOG(...) do {} while (0)
+#define CCLOGWARN(...) do {} while (0)
 #define CCLOGINFO(...) do {} while (0)
-#define CCLOGERROR(...) do {} while (0)
 
 #elif COCOS2D_DEBUG == 1
 #define CCLOG(...) __CCLOG(__VA_ARGS__)
-#define CCLOGERROR(...) __CCLOGWITHFUNCTION(__VA_ARGS__)
+#define CCLOGWARN(...) __CCLOGWITHFUNCTION(__VA_ARGS__)
 #define CCLOGINFO(...) do {} while (0)
 
 #elif COCOS2D_DEBUG > 1
 #define CCLOG(...) __CCLOG(__VA_ARGS__)
-#define CCLOGERROR(...) __CCLOGWITHFUNCTION(__VA_ARGS__)
+#define CCLOGWARN(...) __CCLOGWITHFUNCTION(__VA_ARGS__)
 #define CCLOGINFO(...) __CCLOG(__VA_ARGS__)
 #endif // COCOS2D_DEBUG
 
