@@ -1,5 +1,7 @@
 version 2.0-rc2 XX-May-2012
 . [NEW] Added Javascript test using JSCocoa (Mac only)
+. [NEW] RenderTexture: Added support for Depth Stencil
+. [FIX] Macros: CCLOG doesn't log the function name. Only CCLOGERROR.
 
 version 2.0-rc1 19-Apr-2012
 . [NEW] v1.1 Forward-ported changes:
